--- a/activityService/src/main/resources/application.yaml
+++ b/activityService/src/main/resources/application.yaml
@@ -1,10 +1,19 @@
 spring:
   application:
-    name: activityService
+    name: activity-service
   data:
     mongodb:
       uri: mongodb://localhost:27017/fitnessactivity
       database: fitnessactivity
 
+
+
 server:
   port:8082
+
+eureka:
+  client:
+    service-url:
+      defaultZone: https://localhost:8761/eureka
+
+
